# EasyDeploy

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: Compilation.yml
deploy_core/: CMakeLists.txt
deploy_utils/: CMakeLists.txt
deploy_utils/image_processing_utils/: CMakeLists.txt
deploy_utils/image_processing_utils/include/detection_2d_util/: detection_2d_util.h
deploy_utils/image_processing_utils/src/: detection_2d_cuda_preprocess.cu  detection_2d_postprocess_cpu.cpp  detection_2d_preprocess_cpu.cpp  detection_2d_preprocess_cuda.cpp
detection_2d/: CMakeLists.txt  README.md
detection_2d/detection_2d_rt_detr/: CMakeLists.txt
detection_2d/detection_2d_rt_detr/benchmark/: CMakeLists.txt  benchmark_detection_2d_rt_detr.cpp
detection_2d/detection_2d_rt_detr/eval/: CMakeLists.txt  eval_detection_2d_rt_detr.cpp
detection_2d/detection_2d_rt_detr/include/detection_2d_rt_detr/: rt_detr.h  rt_detr.hpp
detection_2d/detection_2d_rt_detr/src/: rt_detr.cpp  rt_detr_factory.cpp
detection_2d/detection_2d_rt_detr/test/: CMakeLists.txt  test_detection_2d_rt_detr.cpp
detection_2d/detection_2d_yolov8/: CMakeLists.txt
detection_2d/detection_2d_yolov8/benchmark/: CMakeLists.txt  benchmark_detection_2d_yolov8.cpp
detection_2d/detection_2d_yolov8/eval/: CMakeLists.txt  eval_detection_2d_yolov8.cpp
detection_2d/detection_2d_yolov8/include/detection_2d_yolov8/: yolov8.h  yolov8.hpp
detection_2d/detection_2d_yolov8/src/: yolov8.cpp  yolov8_factory.cpp
detection_2d/detection_2d_yolov8/test/: CMakeLists.txt  test_detection_2d_yolov8.cpp
doc/: EnviromentSetup.md  HowToDeployModels.md  QuickStart.md
docker/: build_docker.sh  into_docker.sh  jetson_tensorrt_u2004.dockerfile  nvidia_gpu_tensorrt_u2204.dockerfile  rknn_u2204.dockerfile
inference_core/: CMakeLists.txt
inference_core/ort_core/: CMakeLists.txt
inference_core/ort_core/include/ort_core/: ort_core.h
inference_core/ort_core/onnxruntime-pkg-x86/: ThirdPartyNotices.txt
inference_core/ort_core/src/: ort_core.cpp  ort_core_factory.cpp
inference_core/rknn_core/: CMakeLists.txt
inference_core/rknn_core/include/rknn_core/: rknn_core.h
inference_core/rknn_core/src/: rknn_core.cpp  rknn_core_factory.cpp
inference_core/trt_core/: CMakeLists.txt
inference_core/trt_core/src/: trt_blob_buffer.hpp
sam/: CMakeLists.txt
sam/sam_mobilesam/: CMakeLists.txt
sam/sam_mobilesam/benchmark/: CMakeLists.txt  benchmark_sam_mobilesam.cpp
sam/sam_mobilesam/include/sam_mobilesam/: mobilesam.h  mobilesam.hpp
sam/sam_mobilesam/src/: mobilesam.cpp  mobilesam_factory.cpp
sam/sam_mobilesam/test/: CMakeLists.txt  test_sam_mobilesam.cpp
simple_tests/: CMakeLists.txt
simple_tests/include/tests/: fps_counter.h  fs_util.h  image_drawer.h  test_func.h
simple_tests/src/: fs_util.cpp  gtest_main.cpp  test_cpu_devkit.cpp  test_func.cpp  test_jetson_devkit.cpp  test_rk_devkit.cpp  test_x86_devkit.cpp
test_data/quant_data/: dataset.txt
tools/: cvt_onnx2rknn_all.sh  cvt_onnx2rknn_mobilesam_box_decoder.py  cvt_onnx2rknn_mobilesam_point_decoder.py  cvt_onnx2rknn_nanosam.py  cvt_onnx2rknn_yolov8_quant.py  cvt_onnx2trt_all.sh  rk3588_echo_npu_usage.sh  rk3588_max_performance.sh  rt_detr_v2_export_onnx.py
